--- a/Bootstrap/backend/docent/home.html
+++ b/Bootstrap/backend/docent/home.html
@@ -43,15 +43,15 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="https://stenden.com">
-						<img src="../../dist/css/images/stenden_logo1.png" alt="Stenden Logo">
-					</a>
+                        <img src="../../dist/css/images/stenden_logo1.png" alt="Stenden Logo">
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
-						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
+                        <li><a href="#">English</a></li>
+                        <li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,14 +61,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                        <li><a href="../../portfolio.html">Portfolio's</a></li>
-                        <li><a href="cijfers.html">Cijfers</a></li>
-                        <li><a href="projecten.html">Beoordelen</a></li>
+                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Projecten</a></li>
+                        <li><a href="#">Mijn Cijferlijst</a></li>
+                        <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Keuzemenu</h1>
                 </div>
             </div></div>  
 
@@ -76,37 +76,34 @@
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
-                    
+
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Wat wilt u doen?</h4>
-                        <p>
-                                <ul>
-                                    <li>
-                                        <a href="../../overzicht.html"> Portfolio's bekijken </a>
-                                    </li>
-									<li>
-                                        <a href="cijfers.html"> Cijfers toevoegen en/of aanpassen</a>
-                                    </li>
-									<li>
-                                        <a href="projecten.html"> Projecten beoordelen  </a>
-                                    </li>
-                                </ul>
-                        </p>
+                        <ul>
+                            <li>
+                                <a href="../../overzicht.html"> Portfolio's bekijken </a>
+                            </li>
+                            <li>
+                                <a href="cijfers.html"> Cijfers toevoegen en/of aanpassen</a>
+                            </li>
+                            <li>
+                                <a href="projecten.html"> Projecten beoordelen  </a>
+                            </li>
+                        </ul>
                     </div>
-                    
+
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
