--- a/Bootstrap/backend/docent/invoercijfers.html
+++ b/Bootstrap/backend/docent/invoercijfers.html
@@ -58,22 +58,20 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
                         <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li class="active"><a href="#">Mijn Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Cijfers toevoegen/aanpassen</h1>
                 </div>
             </div></div>  
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Cijfers toevoegen en/of aanpassen van [NAAM]</h4>
-                        <p>
                         <div class="form-area">
                             <table class="table table-striped table-responsive ">
                                 <thead>
