--- a/Bootstrap/backend/docent/beoordeel.html
+++ b/Bootstrap/backend/docent/beoordeel.html
@@ -48,7 +48,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
+                        <li><a href="#">English</a></li>
                         <li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
@@ -58,14 +58,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Beoordeling project</h1>
                 </div>
             </div></div>  
         <div class="container">
@@ -73,10 +73,8 @@
                 <div class="panel panel-default">
 
                     <div class="bs-callout bs-callout-danger">
-                        <p>
                         <form class="form-horizontal">
-                            <fieldset>
-                                <legend>Project beoordelen</legend>
+                            
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Code</label>  
                                     <div class="col-md-4">
@@ -109,12 +107,10 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-md-8">
-                                        <button id="button1id" name="submit" class="btn btn-success">Toevoegen</button>
+                                        <button id="button1id" name="submit" class="btn btn-success pull-right">Toevoegen</button>
                                     </div>
                                 </div>
-                            </fieldset>
                         </form>
-                        </p>
                     </div>
                 </div>
             </div>
