--- a/Bootstrap/backend/slber/home.html
+++ b/Bootstrap/backend/slber/home.html
@@ -68,7 +68,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Keuzemenu</h1>
                 </div>
             </div></div>  
 
@@ -78,8 +78,6 @@
                 <div class="panel panel-default">
                     
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Wat wil je aanpassen?</h4>
-                        <p>
                                 <ul>
                                     <li>
                                         <a href="portfolio.html"> Portfolio </a>
@@ -94,7 +92,6 @@
                                         <a href="thema.html"> Thema </a>
                                     </li>
                                 </ul>
-                        </p>
                     </div>
                     
             </div>
