--- a/Bootstrap/backend/docent/beoordeel.html
+++ b/Bootstrap/backend/docent/beoordeel.html
@@ -76,27 +76,27 @@
                         <form class="form-horizontal">
                             
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Code</label>  
+                                    <label class="col-md-4 control-label" for="textinput">Code en Projectnaam</label>  
                                     <div class="col-md-4">
-                                        <input id="textinput" name="code" type="text" placeholder="Code" class="form-control input-md">
+                                        <input id="textinput" name="code" type="text" placeholder="IIPR1 Project Professionele Website" class="form-control input-md">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Naam van project</label>  
+                                    <label class="col-md-4 control-label" for="textinput">Datum</label>  
                                     <div class="col-md-4">
-                                        <input id="textinput" name="project" type="text" placeholder="Naam van project" class="form-control input-md">
+                                        <input id="textinput" name="project" type="date" class="form-control input-md">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Aantal EC</label>  
                                     <div class="col-md-4">
-                                        <input id="textinput" name="ec" type="number" placeholder="Aantal EC" class="form-control input-md">
+                                        <input id="textinput" name="ec" type="number" placeholder="0-60" min="0" max="60" step="1" class="form-control input-md">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Cijfer</label>  
                                     <div class="col-md-4">
-                                        <input id="textinput" name="cijfer" type="number"  step="0.01" min="0" placeholder="Cijfer" class="form-control input-md">
+                                        <input id="textinput" name="cijfer" type="number"  step="0.1" min="0" max="10" placeholder="0-10" class="form-control input-md">
                                     </div>
                                 </div>
                                 <div class="form-group">
