--- a/Bootstrap/backend/docent/overzichtprojecten.html
+++ b/Bootstrap/backend/docent/overzichtprojecten.html
@@ -14,6 +14,7 @@
         <!-- Bootstrap core CSS -->
         <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 
+
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -61,16 +62,17 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Mijn Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Keuzemenu</h1>
+                    <h1 class="page-header">Projecten leerlingen</h1>
                 </div>
             </div></div>  
+
 
 
         <div class="container">
@@ -78,32 +80,45 @@
                 <div class="panel panel-default">
 
                     <div class="bs-callout bs-callout-danger">
-                        <ul>
-                            <li>
-                                <a href="../../overzicht.html"> Portfolio's bekijken </a>
-                            </li>
-                            <li>
-                                <a href="overzicht.html"> Cijfers toevoegen en/of aanpassen</a>
-                            </li>
-                            <li>
-                                <a href="projecten.html"> Projecten beoordelen  </a>
-                            </li>
-                        </ul>
-                    </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">Jaar 1</div>
+                            <div class="panel-body">
+                                <ul class="treeview">
+                                    <li><a href="#">Klas</a>
+                                        <ul>
+                                            <li><a href="#">INF1I</a>
+                                                <ul>
+                                                    <li><a href="projecten.html">Dennis Kramer</a></li>
+                                                    <li><a href="projecten.html">Chiel Timmermans</a></li>
+                                                    <li><a href="projecten.html">Tom Verra</a></li>
+                                                    <li><a href="projecten.html">Siem Schippers</a></li>
+                                                    <li><a href="projecten.html">Tom Verra</a></li>
+                                                    <li><a href="projecten.html">Randy Rijkshoorn</a></li>
+                                                    <li><a href="projecten.html">Jefrey Meijer</a></li>
+                                                    <li><a href="projecten.html">Fekke Fekkes</a></li>
 
-                </div>
-            </div>
-        </div>
+                                                </ul>
 
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="../../dist/js/bootstrap.min.js"></script>
-        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="../../assets/js/vendor/holder.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
-</html>
+                                                </div>
+                                                </div>
+                                                </div>
+
+                                                </div>
+
+                                                </div>
+                                                </div>
+                                                </div>
+
+
+                                                <!-- Bootstrap core JavaScript
+                                                ================================================== -->
+                                                <!-- Placed at the end of the document so the pages load faster -->
+                                                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                                                <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+                                                <script src="../../dist/js/bootstrap.min.js"></script>
+                                                <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+                                                <script src="../../assets/js/vendor/holder.min.js"></script>
+                                                <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+                                                <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+                                                </body>
+                                                </html>
