--- a/Bootstrap/backend/docent/projecten.html
+++ b/Bootstrap/backend/docent/projecten.html
@@ -58,21 +58,20 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Projecten van [NAAM]</h1>
                 </div>
             </div></div>
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Projecten beoordelen </h4>
                         <a class="list-group-item inactive-link" href="#">
                             <h4 class="list-group-item-heading">Professionele website</h4>
                             <p class="list-group-item-text">
