--- a/Bootstrap/backend/docent/bijlage.html
+++ b/Bootstrap/backend/docent/bijlage.html
@@ -58,29 +58,29 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Bijlage Project(en)</h1>
                 </div>
             </div></div>
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
                     <div class="bs-callout bs-callout-danger">
-						<h4>Bijlagen voor het project: [PROJECT NAAM]</h4>
-						                                <ul>
-                                    <li>
-                                        <a href='#'> Bijlage1 </a>
-                                    </li>
-                                    <li>
-                                       <a href='#'> Bijlage2 </a>
-                                    </li>
-                                </ul>
+
+                        <ul>
+                            <li>
+                                <a href='#'> Bijlage1 </a>
+                            </li>
+                            <li>
+                                <a href='#'> Bijlage2 </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
