--- a/Bootstrap/backend/docent/invoercijfers.html
+++ b/Bootstrap/backend/docent/invoercijfers.html
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Cijfers toevoegen/aanpassen</h1>
+                    <h1 class="page-header">Cijfers toevoegen/wijzigen</h1>
                 </div>
             </div></div>  
         <div class="container">
@@ -80,7 +80,7 @@
                                         <th>Datum</th>
                                         <th>Aantal EC</th>
                                         <th>Cijfer</th>
-                                        <th>Aanpassen</th>
+                                        <th>Wijzig</th>
                                     </tr>
                                 </thead>
                                 <tbody>
