goeiedag eem docent gefxied gg nenis

--- a/Bootstrap/backend/docent/invoercijfers.html
+++ b/Bootstrap/backend/docent/invoercijfers.html
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Cijfers toevoegen/wijzigen</h1>
+                    <h1 class="page-header">Cijfers van [NAAM]</h1>
                 </div>
             </div></div>  
         <div class="container">
@@ -102,6 +102,7 @@
                             </table>
                         </div>
                         <p> <a href="toevoegen.html"> Klik hier om een cijfer toe te voegen  </a> </p>
+                        <a href="overzichtcijfers.html">&#8592;</a>
                     </div>
                 </div>
             </div>
