--- a/Bootstrap/backend/docent/projecten.html
+++ b/Bootstrap/backend/docent/projecten.html
@@ -93,7 +93,7 @@
                         </a>
                         <p><a href="bijlage.html"><button id="button1id" name="bijlagen" class="btn btn-info">Bekijk bijlagen</button></a></p>
                         <p><a href="beoordeel.html"><button id="button1id" name="beoordeel" class="btn btn-success">Beoordeel dit project</button></a></p>
-						
+				<a href="overzichtprojecten.html">&#8592;</a>		
                     </div>
                 </div>
             </div>
