--- a/Bootstrap/backend/docent/home.html
+++ b/Bootstrap/backend/docent/home.html
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
                         <li><a href="#">Mijn Projecten</a></li>
                         <li><a href="#">Mijn Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
@@ -80,13 +80,13 @@
                     <div class="bs-callout bs-callout-danger">
                         <ul>
                             <li>
-                                <a href="../../overzicht.html"> Portfolio's bekijken </a>
+                                <a href="../../overzicht.html">Portfolio's bekijken</a>
                             </li>
                             <li>
-                                <a href="overzicht.html"> Cijfers toevoegen en/of aanpassen</a>
+                                <a href="overzichtcijfers.html">Cijfers toevoegen/wijzigen</a>
                             </li>
                             <li>
-                                <a href="projecten.html"> Projecten beoordelen  </a>
+                                <a href="overzichtprojecten.html">Projecten beoordelen/bekijken</a>
                             </li>
                         </ul>
                     </div>
