--- a/Bootstrap/backend/docent/overzichtcijfers.html
+++ b/Bootstrap/backend/docent/overzichtcijfers.html
@@ -69,7 +69,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Cijfers leerlingen</h1>
+                    <h1 class="page-header">Leerlingen</h1>
                 </div>
             </div></div>  
 
@@ -101,6 +101,7 @@
 
                                                 </div>
                                                 </div>
+                                                <a href="home.html">&#8592;</a>
                                                 </div>
 
                                                 </div>
