--- a/Bootstrap/backend/student/home.html
+++ b/Bootstrap/backend/student/home.html
@@ -78,20 +78,20 @@
                 <div class="panel panel-default">
                     
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Wat wil je aanpassen?</h4>
+                        <h4>Wat wil je doen?</h4>
                         <p>
                                 <ul>
                                     <li>
-                                        <a href="portfolio.html"> Portfolio </a>
+                                        <a href="portfolio.html"> Inhoud portfolio pagina aanpassen </a>
                                     </li>
 									<li>
-                                        <a href="projecten.html"> Projecten </a>
+                                        <a href="projecten.html"> Projecten aanpassen/toevoegen</a>
                                     </li>
 									<li>
-                                        <a href="gastenboek.html"> Gastenboek </a>
+                                        <a href="thema.html"> Thema aanpassen </a>
                                     </li>
-									<li>
-                                        <a href="thema.html"> Thema </a>
+                                    <li>
+                                        <a href="gastenboek.html"> Gastenboek bewerken </a>
                                     </li>
                                 </ul>
                         </p>
