moi alles commiten dikke fix dennis g

--- a/Bootstrap/backend/docent/overzichtprojecten.html
+++ b/Bootstrap/backend/docent/overzichtprojecten.html
@@ -62,9 +62,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Cijferlijst</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li class="active"><a href="#">Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -92,7 +92,6 @@
                                                     <li><a href="projecten.html">Chiel Timmermans</a></li>
                                                     <li><a href="projecten.html">Tom Verra</a></li>
                                                     <li><a href="projecten.html">Siem Schippers</a></li>
-                                                    <li><a href="projecten.html">Tom Verra</a></li>
                                                     <li><a href="projecten.html">Randy Rijkshoorn</a></li>
                                                     <li><a href="projecten.html">Jefrey Meijer</a></li>
                                                     <li><a href="projecten.html">Fekke Fekkes</a></li>
@@ -101,7 +100,7 @@
 
                                                 </div>
                                                 </div>
-                        <a href="home.html">&#8592;</a>
+                                                <a href="home.html">&#8592;</a>
                                                 </div>
 
                                                 </div>
