--- a/Bootstrap/backend/docent/toevoegen.html
+++ b/Bootstrap/backend/docent/toevoegen.html
@@ -58,9 +58,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li class="active"><a href="#">Mijn Cijferlijst <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Projecten</a></li>
+                        <li class="active"><a href="#">Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -88,7 +88,7 @@
                                         <input id="textinput" name="datum" type="date" class="form-control input-md">
                                     </div>
                                 </div>
-                                 <div class="form-group">
+                                <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Aantal EC</label>  
                                     <div class="col-md-4">
                                         <input id="textinput" name="ec" type="number" step="1" min="0" max="60" placeholder="0-60" class="form-control input-md">
@@ -107,6 +107,7 @@
                                 </div>
                             </fieldset>
                         </form>
+                        <a href="invoercijfers.html">&#8592;</a>	
                     </div>
                 </div>
             </div>
