--- a/Bootstrap/backend/docent/beoordeel.html
+++ b/Bootstrap/backend/docent/beoordeel.html
@@ -58,9 +58,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Cijferlijst</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li class="active"><a href="#">Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -74,43 +74,44 @@
 
                     <div class="bs-callout bs-callout-danger">
                         <form class="form-horizontal">
-                            
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Code en Projectnaam</label>  
-                                    <div class="col-md-4">
-                                        <input id="textinput" name="code" type="text" placeholder="IIPR1 Project Professionele Website" class="form-control input-md">
-                                    </div>
+
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="textinput">Code en Projectnaam</label>  
+                                <div class="col-md-4">
+                                    <input id="textinput" name="code" type="text" placeholder="IIPR1 Project Professionele Website" class="form-control input-md">
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Datum</label>  
-                                    <div class="col-md-4">
-                                        <input id="textinput" name="project" type="date" class="form-control input-md">
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="textinput">Datum</label>  
+                                <div class="col-md-4">
+                                    <input id="textinput" name="project" type="date" class="form-control input-md">
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Aantal EC</label>  
-                                    <div class="col-md-4">
-                                        <input id="textinput" name="ec" type="number" placeholder="0-60" min="0" max="60" step="1" class="form-control input-md">
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="textinput">Aantal EC</label>  
+                                <div class="col-md-4">
+                                    <input id="textinput" name="ec" type="number" placeholder="0-60" min="0" max="60" step="1" class="form-control input-md">
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textinput">Cijfer</label>  
-                                    <div class="col-md-4">
-                                        <input id="textinput" name="cijfer" type="number"  step="0.1" min="0" max="10" placeholder="0-10" class="form-control input-md">
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="textinput">Cijfer</label>  
+                                <div class="col-md-4">
+                                    <input id="textinput" name="cijfer" type="number"  step="0.1" min="0" max="10" placeholder="0-10" class="form-control input-md">
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="textarea">Opmerkingen</label>  
-                                    <div class="col-md-4">
-                                        <textarea name="comment" required rows="10" cols="32"></textarea>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="textarea">Opmerkingen</label>  
+                                <div class="col-md-4">
+                                    <textarea name="comment" required rows="10" cols="32"></textarea>
                                 </div>
-                                <div class="form-group">
-                                    <div class="col-md-8">
-                                        <button id="button1id" name="submit" class="btn btn-success pull-right">Toevoegen</button>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-8">
+                                    <button id="button1id" name="submit" class="btn btn-success pull-right">Toevoegen</button>
                                 </div>
+                            </div>
                         </form>
+                        <a href="projecten.html">&#8592;</a>	
                     </div>
                 </div>
             </div>
