--- a/Bootstrap/backend/docent/bijlage.html
+++ b/Bootstrap/backend/docent/bijlage.html
@@ -58,14 +58,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li class="active"><a href="#">Mijn Projecten <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Cijferlijst</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li class="active"><a href="#">Projecten <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Bijlage Project(en)</h1>
+                    <h1 class="page-header">Bijlage(s)</h1>
                 </div>
             </div></div>
         <div class="container">
@@ -81,6 +81,7 @@
                                 <a href='#'> Bijlage2 </a>
                             </li>
                         </ul>
+                        <a href="projecten.html">&#8592;</a>	
                     </div>
                 </div>
             </div>
