--- a/Bootstrap/backend/docent/invoercijfers.html
+++ b/Bootstrap/backend/docent/invoercijfers.html
@@ -58,9 +58,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li class="active"><a href="#">Mijn Cijferlijst <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Projecten</a></li>
+                        <li class="active"><a href="#">Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
