--- a/Bootstrap/backend/docent/overzichtcijfers.html
+++ b/Bootstrap/backend/docent/overzichtcijfers.html
@@ -62,9 +62,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li class="active"><a href="#">Mijn Cijferlijst <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Projecten</a></li>
+                        <li class="active"><a href="#">Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -92,7 +92,6 @@
                                                     <li><a href="invoercijfers.html">Chiel Timmermans</a></li>
                                                     <li><a href="invoercijfers.html">Tom Verra</a></li>
                                                     <li><a href="invoercijfers.html">Siem Schippers</a></li>
-                                                    <li><a href="invoercijfers.html">Tom Verra</a></li>
                                                     <li><a href="invoercijfers.html">Randy Rijkshoorn</a></li>
                                                     <li><a href="invoercijfers.html">Jefrey Meijer</a></li>
                                                     <li><a href="invoercijfers.html">Fekke Fekkes</a></li>
