--- a/Bootstrap/contact.html
+++ b/Bootstrap/contact.html
@@ -63,9 +63,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="portfolio.html">Mijn Portfolio</a></li>
-                        <li><a href="projecten.html">Mijn Projecten</a></li>
-                        <li><a href="cijfers.html">Mijn Cijferlijst</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="projecten.html">Projecten</a></li>
+                        <li><a href="cijfers.html">Cijferlijst</a></li>
                         <li><a href="gastenboek.html">Gastenboek</a></li>
                     </ul>
                 </div>
