--- a/Bootstrap/leeg.html
+++ b/Bootstrap/leeg.html
@@ -63,14 +63,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="portfolio.html">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="projecten.html">Mijn Projecten</a></li>
-                        <li><a href="cijfers.html">Mijn Cijferlijst</a></li>
+                        <li class="active"><a href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="projecten.html">Projecten</a></li>
+                        <li><a href="cijfers.html">Cijferlijst</a></li>
                         <li><a href="gastenboek.html">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Mijn Portfolio</h1>
+                    <h1 class="page-header">Portfolio</h1>
                 </div>
             </div></div>  
 
