Student backend final

--- a/Bootstrap/backend/student/thema.html
+++ b/Bootstrap/backend/student/thema.html
@@ -68,7 +68,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Welkom [NAAM]</h1>
+                    <h1 class="page-header">Thema aanpassen</h1>
                 </div>
             </div></div>  
 
@@ -78,9 +78,8 @@
                 <div class="panel panel-default">
                     
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Thema aanpassen</h4>
                         <p>
-
+                            PLAATS HIER ALLE INHOUD VAN DAT PHP BESTANDJE 
                         </p>
                     </div>
                     
