--- a/Bootstrap/backend/slber/gastenboek.html
+++ b/Bootstrap/backend/slber/gastenboek.html
@@ -62,8 +62,8 @@
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
                         <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="overzichtprojecten.html">Mijn Projecten</a></li>
-						<li><a href="cijfers.html">Cijferlijsten</a></li>
+                        <li><a href="#">Mijn Projecten</a></li>
+                        <li><a href="#">Mijn Opdrachten</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -87,6 +87,9 @@
                                     </li>
 									<li>
                                         <a href="gastenboek.html"> Gastenboek </a>
+                                    </li>
+									<li>
+                                        <a href="thema.html"> Thema </a>
                                     </li>
                                 </ul>
                     </div>
