--- a/Bootstrap/backend/slber/invoercijfers.html
+++ b/Bootstrap/backend/slber/invoercijfers.html
@@ -30,9 +30,7 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-
     <body>
-
         <nav class="navbar navbar-inverse navbar-fixed-top header-bg">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -43,67 +41,80 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="https://stenden.com">
-						<img src="../../dist/css/images/stenden_logo1.png" alt="Stenden Logo">
-					</a>
+                        <img src="../../dist/css/images/stenden_logo1.png" alt="Stenden Logo">
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Engels</a></li>
-						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
+                        <li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="overzichtprojecten.html">Mijn Projecten</a></li>
-						<li><a href="cijfers.html">Cijferlijsten</a></li>
+                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li><a href="#">Mijn Projecten</a></li>
+                        <li class="active"><a href="#">Mijn Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Keuzemenu</h1>
+                    <h1 class="page-header">Cijfers toevoegen/wijzigen</h1>
                 </div>
             </div></div>  
-
-
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
-                    
                     <div class="bs-callout bs-callout-danger">
-                                <ul>
-                                    <li>
-                                        <a href="portfolio.html"> Portfolio </a>
-                                    </li>
-									<li>
-                                        <a href="projecten.html"> Projecten </a>
-                                    </li>
-									<li>
-                                        <a href="gastenboek.html"> Gastenboek </a>
-                                    </li>
-                                </ul>
+                        <div class="form-area">
+                            <table class="table table-striped table-responsive ">
+                                <thead>
+                                    <tr>
+                                        <th>Code en Studieonderdeel</th>
+                                        <th>Datum</th>
+                                        <th>Aantal EC</th>
+                                        <th>Cijfer</th>
+                                        <th>Wijzig</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>OIPHP1 Inleiding Programmeren in PHP</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>6.2</td>
+                                        <td> <a href="aanpassen.html">Wijzig</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>OIXH (X)HTML en CSS</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>7.2</td>
+                                        <td> <a href="aanpassen.html">Wijzig</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <p> <a href="toevoegen.html"> Klik hier om een cijfer toe te voegen  </a> </p>
                     </div>
-                    
+                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
