--- a/Bootstrap/backend/slber/home.html
+++ b/Bootstrap/backend/slber/home.html
@@ -83,7 +83,7 @@
                                         <a href="portfolio.html"> Portfolio </a>
                                     </li>
 									<li>
-                                        <a href="projecten.html"> Projecten </a>
+                                        <a href="overzichtprojecten.html"> Projecten </a>
                                     </li>
 									<li>
                                         <a href="gastenboek.html"> Gastenboek </a>
