--- a/Bootstrap/backend/slber/Projecten.html
+++ b/Bootstrap/backend/slber/Projecten.html
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="#">Mijn Portfolio</a></li>
+                        <li><a href="home.html">Mijn Portfolio</a></li>
                         <li class="active"><a href="projecten.html">Mijn Projecten <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Mijn Opdrachten</a></li>
                         <li><a href="#">Gastenboek</a></li>
@@ -87,7 +87,7 @@
                             </p>    
                         </a>
                         <p><a href="bijlage.html"><button id="button1id" name="bijlagen" class="btn btn-info">Bekijk bijlagen</button></a></p>
-                        <p><a href="beoordeel.html"><button id="button1id" name="beoordeel" class="btn btn-success">Beoordeel dit project</button></a></p>
+                        <p><a href="beoordeel.php"><button id="button1id" name="beoordeel" class="btn btn-success">Beoordeel dit project</button></a></p>
                        
 					   <a class="list-group-item inactive-link" href="#">
                             <h4 class="list-group-item-heading">Portfolio</h4>
@@ -98,7 +98,7 @@
                             </p>    
                         </a>
                         <p><a href="bijlage.html"><button id="button1id" name="bijlagen" class="btn btn-info">Bekijk bijlagen</button></a></p>
-                        <p><a href="beoordeel.html"><button id="button1id" name="beoordeel" class="btn btn-success">Beoordeel dit project</button></a></p>
+                        <p><a href="beoordeel.php"><button id="button1id" name="beoordeel" class="btn btn-success">Beoordeel dit project</button></a></p>
 						
                     </div>
                 </div>
