student is klaar (backend)

--- a/Bootstrap/backend/student/portfolio.html
+++ b/Bootstrap/backend/student/portfolio.html
@@ -50,7 +50,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
+                        <li><a href="#">English</a></li>
                         <li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
