--- a/Bootstrap/backend/student/gastenboek.html
+++ b/Bootstrap/backend/student/gastenboek.html
@@ -50,7 +50,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
+                        <li><a href="#">English</a></li>
 						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
@@ -61,14 +61,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li class="active"><a href="#">Portfolio<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Projecten</a></li>
+                        <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Gastenboek aanpassen</h1>
+                    <h1 class="page-header">Gastenboek wijzigen</h1>
                 </div>
             </div></div>  
 
@@ -82,8 +82,8 @@
                         <p>
                             PLAATS HIER ALLE INHOUD VAN DAT PHP BESTANDJE 
                         </p>
+                        <a href="home.html">&#8592;</a>
                     </div>
-                    
             </div>
         </div>
     </div>
