--- a/Bootstrap/backend/student/projecten.html
+++ b/Bootstrap/backend/student/projecten.html
@@ -50,7 +50,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
+                        <li><a href="#">English</a></li>
 						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
@@ -61,8 +61,8 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Portfolio<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Projecten</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li class="active"><a href="#">Projecten<span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
