--- a/Bootstrap/backend/student/thema.html
+++ b/Bootstrap/backend/student/thema.html
@@ -50,7 +50,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Engels</a></li>
+                        <li><a href="#">English</a></li>
 						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
@@ -61,9 +61,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li class="active"><a href="#">Portfolio<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Projecten</a></li>
+                        <li><a href="#">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
@@ -81,6 +81,7 @@
                         <p>
                             PLAATS HIER ALLE INHOUD VAN DAT PHP BESTANDJE 
                         </p>
+                        <a href="home.html">&#8592;</a>
                     </div>
                     
             </div>
