--- a/Bootstrap/backend/slber/cijfers.html
+++ b/Bootstrap/backend/slber/cijfers.html
@@ -52,7 +52,7 @@
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Engels</a></li>
-						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
+			<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,9 +62,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="overzichtprojecten.html">Projecten</a></li>
+                        <li class="active"><a href="cijfers.html">Cijferlijst <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
