--- a/Bootstrap/backend/slber/home.html
+++ b/Bootstrap/backend/slber/home.html
@@ -51,7 +51,7 @@
                         <li><a href="#">Instellingen</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Engels</a></li>
-						<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
+			<li><a href="../../uitlogscherm.html">Uitloggen</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,9 +61,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="overzichtprojecten.html">Mijn Projecten</a></li>
-						<li><a href="cijfers.html">Cijferlijsten</a></li>
+                        <li class="active"><a href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="overzichtprojecten.html">Projecten</a></li>
+                        <li><a href="cijfers.html">Cijferlijsten</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
