--- a/Bootstrap/backend/slber/portfolio.html
+++ b/Bootstrap/backend/slber/portfolio.html
@@ -61,9 +61,9 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Mijn Portfolio <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Mijn Projecten</a></li>
-                        <li><a href="#">Mijn Opdrachten</a></li>
+                        <li class="active"><a href="Portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
+                        <li><a href="overzichtprojecten.html">Projecten</a></li>
+                        <li><a href="cijfers.html">Cijferlijst</a></li>
                         <li><a href="#">Gastenboek</a></li>
                     </ul>
                 </div>
